# AstroPitography

./: .gitignore  .python-version  AstroPitography.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.txt  README.md  init_venv.sh  noxfile.py  pyproject.toml
.github/workflows/: docs-build-deploy.yaml  pinned-tests.yaml  publish-package.yaml  quality-typing-checks.yaml
Old/: AstroPitography.py  AstroPitography_v1-04.py
docs/: conf.py  index.md
docs/source/: conf.py  index.md
docs/source/pages/installation/: CompleteGuide.md
lockfiles/3.10/: lockfile.txt
src/astropitography/: AstroPitography.py  __main__.py  camera_manager.py  gui_manager.py  settings.py  tetra3.py  utils.py
tests/images/output/: aligned-0-3.png.REMOVED.git-id
tetra3/: .gitignore  README.rst  __init__.py  requirements.txt  tetra3.py
tetra3/docs/: api_docs.rst  conf.py  index.rst  installation.rst
tetra3/examples/: test_tetra3.py
tetra3/test_data/: 2019-07-29T204726_Alt40_Azi-135_Try1.tiff  2019-07-29T204726_Alt40_Azi-45_Try1.tiff  2019-07-29T204726_Alt40_Azi135_Try1.tiff  2019-07-29T204726_Alt40_Azi45_Try1.tiff  2019-07-29T204726_Alt60_Azi-135_Try1.tiff  2019-07-29T204726_Alt60_Azi-45_Try1.tiff  2019-07-29T204726_Alt60_Azi135_Try1.tiff  2019-07-29T204726_Alt60_Azi45_Try1.tiff
