[build-system]
requires      = ["setuptools>=61.0.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.black]
line-length = 88
include = '/src/.*\.pyi?$|/tests/.*\.pyi?$|/docs/.*\.pyi?$|noxfile.py'

classifiers = [
    'Natural Language :: English',
    'Operating System :: Raspberry Pi',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Typing :: Typed',
]


[tool.ruff]
cache-dir = ".cache/ruff"
# https://beta.ruff.rs/docs/rules
select = [
    "A", #flake8-builtins: https://github.com/gforcada/flake8-builtins
    "B", #flake8-bugbear: https://pypi.org/project/flake8-bugbear/
    "E", #pycodestyle (errors): https://beta.ruff.rs/docs/rules/#error-e
    "F", #pyflakes: https://beta.ruff.rs/docs/rules/#pyflakes-f
    "I", # isort: https://beta.ruff.rs/docs/rules/#isort-i
    "NPY", # numpy: https://beta.ruff.rs/docs/rules/#numpy-specific-rules-npy
    "PD", # pandas-vet: https://pypi.org/project/pandas-vet/
    "PLE", # pylint errors: https://beta.ruff.rs/docs/rules/#pylint-pl
    "PT", # flake8-pytest-style: https://pypi.org/project/flake8-pytest-style/
    "SIM", # flake8-simplify: https://pypi.org/project/flake8_simplify/
    "TRY", # tryceratops: https://pypi.org/project/tryceratops/ , https://guicommits.com/handling-exceptions-in-python-like-a-pro/
    "RUF", #ruff specific: https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
]
ignore = [
    "B008", # "Do not call function in argument defaults" (conflicts with use of `typer.Option`)
    "B028", # "explicit `stacklevel` for warnings.warn" (I don't feel this is necessary in typical usage.)
    "E501", # "line too long" (for strings and *comments*, which cannot be autofixed.)
    "SIM108", # "use ternary operator instead" (often harder to read than a multiline if-then-else block.)
    "TRY003", # "Avoid specifying long messages" (The alternative would be *many* different exception classes.)
    "TRY200", # "Use raise from" (Duplicates B904, but with a less informative error message.)
    "TRY300", # "Use try-except-else" (A useful smell-test, but `try-except-else` only makes sense with `finally`.)
]

[tool.ruff.isort]
known-first-party = [
    "astropitography",
]

[project]
name = "astropitography"
description = "Astrophotography + raspberry pi HQ camera = AstroPitography"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["astrophotography", "raspberry pi"]
authors = [
    { name = "Adam Baskerville", email = "adamlukebaskerville@gmail.com" },
]
maintainers = [
  { name = "Adam Baskerville", email = "adamlukebaskerville@gmail.com" },
  { name = "Daniel Opara", email = "daniel.opara@tufts.edu" }
]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",

  "Topic :: Education",
  "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
  "Topic :: Multimedia :: Video :: Capture",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

dynamic =["version" ]

dependencies = [
  "scipy==1.8.1",
  "numpy==1.24.3",
  "picamera>=1.12",
  "pidng>=3.4.7",
  "Pillow>=8.4.0",
  "PySimpleGUI>=4.55.1",
]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  "pip-tools", 
  "pytest", 
  "bumpver"
]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "furo>=2023.08.17",
]

[project.urls]
Homepage = "https://adambaskerville.github.io/tabs/astro/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
exclude = ["tests*", "images*", "AstroPitography_GUI.png", "AstroPitographyLogoSmall.png", ".gitignore"]

[tool.setuptools.package-data]
"astropitography.db" = ["*.npz"]
"astropitography" = ["*.png"]

[project.scripts]
astropitography = "astropitography.__main__:main"

